infrastructure/dev/oauth2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-oauth2
  namespace: oauth2-proxy
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingresskubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: "2000m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.systemtracker.no-ip.org/oauth2/start?rd=https://$host
    nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.systemtracker.no-ip.org/oauth2/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $name_upstream_1 $upstream_cookie_name_1;

      access_by_lua_block {
        if ngx.var.name_upstream_1 ~= "" then
          ngx.header["Set-Cookie"] = "name_1=" .. ngx.var.name_upstream_1 .. ngx.var.auth_cookie:match("(; .*)")
        end
      }
spec:
  ingressClassName: nginx
  rules:
  - host: oauth2-proxy.systemtracker.no-ip.org
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
        path: /oauth2
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - oauth2-proxy.systemtracker.no-ip.org
    secretName: oauth-tls
